Added support for screenrant source

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "fastapi",
         "hollywoodreporter",
         "loguru",
-        "pydantic"
+        "pydantic",
+        "screenrant"
     ]
 }
