--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "hollywoodreporter",
         "loguru",
         "pydantic",
-        "screenrant"
+        "screenrant",
+        "Slashfilm"
     ]
 }
